# suzaku

./: .gitignore  .gitmodules  CHANGELOG-Japanese.md  CHANGELOG.md  Cargo.toml  OLD-README-Japanese.md  OLD-README.md  README-Japanese.md  README.md  contributors.txt
.github/: copilot-instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  integration-test.yml  release.yml  rust.yml
art/: logo.txt
config/: abused_aws_api_calls.csv  aws_ct_timeline_default_profile.txt  aws_profile.yaml  azure_profile.yaml  default_profile.yaml  mitre_tactics.txt
src/: afterfact.rs  aws_detect.rs  aws_metrics.rs  aws_summary.rs  cloudtrail.rs  cmd.rs  color.rs  core.rs  main.rs  option.rs  result.rs  rules.rs  scan.rs  update.rs  util.rs  yaml.rs
src/cmd/: aws.rs  aws_detect.rs  aws_detect_writer.rs  aws_metrics.rs  aws_summary.rs  azure.rs  update.rs
src/cmd/aws/: aws_detect.rs  aws_metrics.rs  aws_search.rs  aws_summary.rs  aws_timeline.rs
src/cmd/azure/: azure_timeline.rs
src/core/: color.rs  log_source.rs  rules.rs  scan.rs  summary.rs  timeline.rs  timeline_writer.rs  util.rs
src/detections/: configs.rs  detection.rs  utils.rs
src/detections/rule/: condition_parser.rs  count.rs  matchers.rs  mod.rs  selectionnodes.rs
src/option/: cli.rs  geoip.rs  htmlreporter.rs  timefiler.rs
src/options/: htmlreport.rs  update.rs
src/timeline/: computer_metrics.rs  metrics.rs  mod.rs  timelines.rs
terraform/: README.md  infra.tf  terraform.tfvars.template  variables.tf
test_files/json/: azure_graph_api_format.json  azure_value_format.json  test.json
test_files/parquet/: DeleteTrail.parquet  test.parquet
website/: mkdocs.yml
website/docs/: index.ar.md  index.de.md  index.es.md  index.fr.md  index.hi.md  index.id.md  index.ja.md  index.ko.md  index.md  index.my.md  index.pt-BR.md  index.th.md  index.tr.md  index.uk.md  index.zh-TW.md
website/docs/commands/: analysis.ar.md  analysis.de.md  analysis.es.md  analysis.fr.md  analysis.hi.md  analysis.id.md  analysis.ja.md  analysis.ko.md  analysis.md  analysis.my.md  analysis.pt-BR.md  analysis.th.md  analysis.tr.md  analysis.uk.md  analysis.zh-TW.md  dfir-summary.ar.md  dfir-summary.de.md  dfir-summary.es.md  dfir-summary.fr.md  dfir-summary.hi.md  dfir-summary.id.md  dfir-summary.ja.md  dfir-summary.ko.md  dfir-summary.md  dfir-summary.my.md  dfir-summary.pt-BR.md  dfir-summary.th.md  dfir-summary.tr.md  dfir-summary.uk.md  dfir-summary.zh-TW.md  dfir-timeline.ar.md  dfir-timeline.de.md  dfir-timeline.es.md  dfir-timeline.fr.md  dfir-timeline.hi.md  dfir-timeline.id.md  dfir-timeline.ja.md  dfir-timeline.ko.md  dfir-timeline.md  dfir-timeline.my.md  (+20 more)
website/docs/getting-started/: compiling.ar.md  compiling.de.md  compiling.es.md  compiling.fr.md  compiling.hi.md  compiling.id.md  compiling.ja.md  compiling.ko.md  compiling.md  compiling.my.md  compiling.pt-BR.md  compiling.th.md  compiling.tr.md  compiling.uk.md  compiling.zh-TW.md  git-cloning.ar.md  git-cloning.de.md  git-cloning.es.md  git-cloning.fr.md  git-cloning.hi.md  git-cloning.id.md  git-cloning.ja.md  git-cloning.ko.md  git-cloning.md  git-cloning.my.md  git-cloning.pt-BR.md  git-cloning.th.md  git-cloning.tr.md  git-cloning.uk.md  git-cloning.zh-TW.md  index.ar.md  index.de.md  index.es.md  index.fr.md  index.hi.md  index.id.md  index.ja.md  index.ko.md  index.md  index.my.md  (+20 more)
website/docs/overview/: features.ar.md  features.de.md  features.es.md  features.fr.md  features.hi.md  features.id.md  features.ja.md  features.ko.md  features.md  features.my.md  features.pt-BR.md  features.th.md  features.tr.md  features.uk.md  features.zh-TW.md  index.ar.md  index.de.md  index.es.md  index.fr.md  index.hi.md  index.id.md  index.ja.md  index.ko.md  index.md  index.my.md  index.pt-BR.md  index.th.md  index.tr.md  index.uk.md  index.zh-TW.md  screenshots.ar.md  screenshots.de.md  screenshots.es.md  screenshots.fr.md  screenshots.hi.md  screenshots.id.md  screenshots.ja.md  screenshots.ko.md  screenshots.md  screenshots.my.md  (+5 more)
website/docs/resources/: changelog.ja.md  (+31 more)
website/scripts/: sync_changelog.py
(+30 files in other folders)
