[package]
name = "suzaku"
version = "0.2.1"
repository = "https://github.com/Yamato-Security/suzaku"
authors = ["Yamato Security @SecurityYamato"]
edition = "2024"
rust-version = "1.87.0"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
bytesize = "2.*"
chrono = "0.4.*"
cidr-utils = "*"
clap = {version = "4.5.*", features = ["derive", "env"]}
colored = "3.*"
comfy-table = "7.*"
console = "0.*"
const_format = "0.2"
csv = "1.3.*"
flate2 = { version = "1.1.*", features = ["zlib-rs"], default-features = false }
git2="*"
hashbrown="*"
indicatif = "*"
itertools = "*"
krapslog = "0.6"
libmimalloc-sys = { version = "*",  features = ["extended"] }
maxminddb = "*"
mimalloc = { version = "*", default-features = false }
num-format = "0.4.*"
serde_json = "1.0.*"
sigma-rust = "*"
sigmars = "*"
termcolor = "*"
terminal_size = "0.4.*"
ureq="*"
tokio = "1.*"


[target.'cfg(unix)'.dependencies] #Mac and Linux
openssl = { version = "*", features = ["vendored"] }  #vendored is needed to compile statically.
