[package]
name = "suzaku"
version = "1.1.0"
repository = "https://github.com/Yamato-Security/suzaku"
authors = ["Yamato Security @SecurityYamato"]
edition = "2024"
rust-version = "1.89.0"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
bytesize = "2.*"
chrono = "0.4.*"
cidr-utils = "*"
clap = {version = "4.5.*", features = ["derive", "env"]}
colored = "2"
comfy-table = "7.*"
console = "0.*"
const_format = "0.2"
csv = "1.3.*"
flate2 = { version = "1.1.*", features = ["zlib-rs"], default-features = false }
git2="*"
hashbrown="*"
indicatif = "*"
itertools = "*"
krapslog = "0.6"
libmimalloc-sys = { version = "*",  features = ["extended"] }
maxminddb = "*"
mimalloc = { version = "*", default-features = false }
num-format = "0.4.*"
serde_json = "1.0.*"
termcolor = "*"
terminal_size = "0.4.*"
ureq="*"
base64 = "*"
hex = "0.4.*"
rust-embed={version = "8.7.2", features = ["include-exclude", "debug-embed"]}
pulldown-cmark = { version = "0.13.*", default-features = false, features = ["simd", "html"] }
horrorshow = "0.8.*"
lazy_static = "1.5.*"
nested="*"
rayon = "1.10.0"
tempfile = "3.20.0"
sigma-rust = { git = "https://github.com/Yamato-Security/sigma-rust" , rev = "5e6f58407f933af5271c252c3293aa845cf5c766" }

[target.'cfg(unix)'.dependencies] #Mac and Linux
openssl = { version = "*", features = ["vendored"] }  #vendored is needed to compile statically.
