[package]
name = "suzaku"
version = "2.0.0-dev"
repository = "https://github.com/Yamato-Security/suzaku"
authors = ["Yamato Security @SecurityYamato"]
edition = "2024"
rust-version = "1.89.0"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
bytesize = "2"
chrono = "0.4.*"
clap = {version = "4.6.*", features = ["derive", "env"]}
colored = "3"
comfy-table = "7"
console = "0.*"
const_format = "0.2"
csv = "1"
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
# Enable the vendored-OpenSSL HTTPS/TLS backend for libgit2. The wildcard
# "*" resolved to a build of libgit2 with no TLS transport, so `update-rules`
# failed with "there is no TLS stream available; class=Ssl (16)". The unix
# target already vendors OpenSSL (see `openssl` below), so this just links
# libgit2's HTTPS support against it. Mirrors the same fix in hayabusa.
git2 = { version = "0.21", features = ["https", "vendored-openssl"] }
hashbrown="*"
indicatif = "*"
itertools = "*"
libmimalloc-sys = { version = "*",  features = ["extended"] }
maxminddb = "*"
mimalloc = { version = "*", default-features = false }
num-format = "0.4.*"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "*"
terminal_size = "0.4.*"
ureq="*"
rayon = "1"
tempfile = "3"
sigma-rust = { git = "https://github.com/Yamato-Security/sigma-rust", tag = "v0.7.1" }

[target.'cfg(unix)'.dependencies] #Mac and Linux
openssl = { version = "*", features = ["vendored"] }  #vendored is needed to compile statically.
